mullvad-api/src/snapshots/mullvad_api__rest__test__auth_evict-2.snap
---
source: mullvad-api/src/rest.rs
expression: request
---
Request {
    inner: Request {
        method: GET,
        uri: /secret,
        version: HTTP/1.1,
        headers: {
            "user-agent": "mullvad-app",
            "accept": "application/json",
            "host": "api.mullvad.net",
            "authorization": "Bearer supersecret",
        },
        body: Body(
            Empty,
        ),
    },
    body: Some(
        [],
    ),
}
