mullvad-api/src/snapshots/mullvad_api__rest__test__auth_evict-4.snap
---
source: mullvad-api/src/rest.rs
expression: request
---
Request {
    inner: Request {
        method: POST,
        uri: https://api.mullvad.net/auth/v1/token,
        version: HTTP/1.1,
        headers: {
            "user-agent": "mullvad-app",
            "accept": "application/json",
            "host": "api.mullvad.net",
            "content-type": "application/json",
            "content-length": "37",
        },
        body: Body(
            Streaming,
        ),
    },
    body: Some(
        [
            123,
            34,
            97,
            99,
            99,
            111,
            117,
            110,
            116,
            95,
            110,
            117,
            109,
            98,
            101,
            114,
            34,
            58,
            34,
            49,
            49,
            49,
            49,
            50,
            50,
            50,
            50,
            51,
            51,
            51,
            51,
            52,
            52,
            52,
            52,
            34,
            125,
        ],
    ),
}
