mullvad-api/src/snapshots/mullvad_api__rest__test__auth_reuse.snap
---
source: mullvad-api/src/rest.rs
expression: request.inner_request()
---
Request {
    method: GET,
    uri: https://api.mullvad.net/secret,
    version: HTTP/1.1,
    headers: {
        "user-agent": "mullvad-app",
        "accept": "application/json",
        "host": "api.mullvad.net",
    },
    body: Full {
        data: None,
    },
}
